# termux-packages

./: LICENSE  README.md  build_and_publish.sh  build_hook.py  pyproject.toml  pyproject.toml.template
dashboard/: middleware.js  package.json
dashboard/app/: globals.css  layout.js  page.js
dashboard/app/api/checkin/: route.js
dashboard/app/api/devices/: route.js
dashboard/app/api/login/: route.js
dashboard/app/login/: page.js
dashboard/lib/: auth.js  db.js
src/termux_hello/: cli.py
