[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termuxapp"
version = "6.1.0"
description = "Simple test package to verify pip install works on Termux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "TermuxSupport" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TermuxSupport/termux-packages"

[project.scripts]
termux-hello = "termux_hello.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/termux_hello"]
